@@ -16,8 +16,10 @@ apport (0.92) UNRELEASED; urgency=low
   * apport/crashdb_impl/launchpad.py, get_unfixed(): Search for 'apport-crash'
     tag, not 'apport'.
   * bin/apport-unpack: Fix format string in error message.
+  * apport/ui.py, __init__(): Intercept ImportError, which can happen for
+    crashes during system upgrades. (LP: #124354)
 
- -- Martin Pitt <martin.pitt@ubuntu.com>  Mon, 23 Jul 2007 08:25:05 +0200
+ -- Martin Pitt <martin.pitt@ubuntu.com>  Tue, 24 Jul 2007 14:16:47 +0200
 
 apport (0.91) gutsy; urgency=low
 
